--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="/css/styles.css">
+  <link rel="stylesheet" href="css/styles.css">
+  
 </head>
 <body>
   <header>
     <div class="container nav">
       <div class="brand">
-        <img src="/images/smart-tech-logo.jpg" alt="Logo Smart‑Tech" />
+        <img src="images/smart-tech-logo.jpg" alt="Logo Smart‑Tech" />
         <strong>Smart‑Tech</strong>
       </div>
       <nav>
